updated minecraft info

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             </article>
             <article>
                 <div class="header">| MineCraft?</div>
-                <div class="paragraph">the minecraft server is currenly running on 1.18 and you can join with the ip
-                    <div class="tooltip"><button onclick="inFunc()" onmouseout="outFunc()"><span id="tooltip">copy?</span>play.swof.xyz</button></div>
+                <div class="paragraph">the minecraft server is currenly down :(
+                    <!--<div class="tooltip"><button onclick="inFunc()" onmouseout="outFunc()"><span id="tooltip">copy?</span>play.swof.xyz</button></div>-->
                 </div>
             </article>
         </div>
