--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </article>
             <article>
                 <div class="header">| MineCraft?</div>
-                <div class="paragraph">the minecraft server is currently down :( however, you can still copy the ip by clicking
+                <div class="paragraph">the minecraft server is up! running 1.18.1, feel free to join by getting the ip 
                 <div class="tooltip"><button onclick="inFunc()" onmouseout="outFunc()"><span id="tooltip">copy?</span>here</button></div>
                 </div>
             </article>
