--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             </article>
             <article>
                 <div class="header">| MineCraft?</div>
-                <div class="paragraph">the minecraft server is currently down :( however, you can still copy the ip by clicking
-                <div class="tooltip"><button onclick="inFunc()" onmouseout="outFunc()"><span id="tooltip">copy?</span>here</button></div>
+                <div class="paragraph">the minecraft server is up again! running on 1.18.1. feel free to join by copying the ip
+                    <div class="tooltip"><button onclick="inFunc()" onmouseout="outFunc()"><span id="tooltip">copy?</span>here</button></div>
                 </div>
             </article>
         </div>
