loading animation added

--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
 
 <body>
     <div class="content-wrapper">
-        <div class="main-header">swof . xyz</div>
+        <div class="main-header animated">swof . xyz</div>
         <div class="content">
             <article>
-                <div class="header">| What is 'swof.xyz'?</div>
-                <div class="paragraph">swof.xyz is currently under construction, while you're here though, check out my socials<br>once the website is complete, you can expect to see my work portfolio as well as other work related things</div>
+                <div class="header animated">| What is 'swof.xyz'?</div>
+                <div class="paragraph animated">swof.xyz is currently under construction, while you're here though, check out my socials<br>once the website is complete, you can expect to see my work portfolio as well as other work related things</div>
             </article>
             <article>
-                <div class="header">| MineCraft?</div>
-                <div class="paragraph">the minecraft server is up again! running on 1.18.1. feel free to join by copying the ip
+                <div class="header animated">| MineCraft?</div>
+                <div class="paragraph animated">the minecraft server is up again! running on 1.18.1. feel free to join by copying the ip
                     <div class="tooltip"><button onclick="inFunc()" onmouseout="outFunc()"><span id="tooltip">copy?</span>here</button></div>
                 </div>
             </article>
         </div>
-        <div class="buttons">
+        <div class="buttons animated">
             <a href="https://www.instagram.com/swof__/" target="_"><i class="fab fa-instagram" title="Instagram"></i></a>
             <a href="https://www.youtube.com/channel/UC2ybd77IHf1lidZPT21gblw" target="_"><i class="fab fa-youtube" title="YouTube"></i></a>
             <a href="https://github.com/swofjeffg" target="_"><i class="fab fa-github" title="Github"></i></a>
