fixed animation bug

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="tabs__content">
             <div class="content-wrapper">
                 <div class="main-header animated">swof . xyz</div>
-                <div class="content">
+                <div class="content white">
                     <article>
                         <div class="header animated">| What is 'swof.xyz'?</div>
                         <div class="paragraph animated">swof.xyz is currently under construction, while you're here though, check out my socials<br>once the website is complete, you can expect to see my work portfolio as well as other work related things</div>
