colour pallete change

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <div class="tabs">
         <input type="radio" class="tabs__radio" name="tabs" id="tab1" checked>
         <label for="tab1" class="tabs__label" onclick="dark()">Home</label>
-        <div class="tabs__content">
+        <div class="tabs__content white">
             <div class="content-wrapper">
                 <div class="main-header animated">swof . xyz</div>
-                <div class="content white">
+                <div class="content">
                     <article>
                         <div class="header animated">| What is 'swof.xyz'?</div>
                         <div class="paragraph animated">swof.xyz is currently under construction, while you're here though, check out my socials<br>once the website is complete, you can expect to see my work portfolio as well as other work related things</div>
@@ -127,7 +127,7 @@
         let labels = document.querySelectorAll(".tabs__label");
 
         for (let i = 0; i < labels.length; i++) {
-            labels[i].style.color = "#222222";
+            labels[i].style.color = "#eadcb9";
         }
     }
 
@@ -135,7 +135,7 @@
         let labels = document.querySelectorAll(".tabs__label");
 
         for (let i = 0; i < labels.length; i++) {
-            labels[i].style.color = "#ebebeb";
+            labels[i].style.color = "#724e2e";
         }
     }
 </script>
