--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     </article>
                     <article>
                         <div class="header animated">| MineCraft?</div>
-                        <div class="paragraph animated">the minecraft server is up again! running on 1.18.1. feel free to join by copying the ip
-                            <div class="tooltip"><button onclick="inFunc()" onmouseout="outFunc()"><span id="tooltip">copy?</span>here</button></div>
+                        <div class="paragraph animated">the server is all over the place at the moment... you can copy the ip
+                            <div class="tooltip"><button onclick="inFunc()" onmouseout="outFunc()"><span id="tooltip">copy?</span>here</button></div>, assume the server is running the latest version
                         </div>
                     </article>
                 </div>
