--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="swof's soon to be web portfolio... once he's done more projects so he can show something">
+    <meta name="description" content="oopsies i forgot i had this domain">
     <meta name="keywords" content="webportfolio, portfolio">
-    <meta name="authour" content="Ivan Koundratas">
+    <meta name="authour" content="not Ivan Koundratas">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>swof.xyz is under development!</title>
+    <title>hi</title>
 
     <link rel="stylesheet" href="style/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
 
     <body>
         <div class="title">
-            swof.xyz will<br>be back :(
+            forgot i had this domain<br>it expires soon bye
         </div>
         <div class="wheel">
             <div class="card"></div>
@@ -32,10 +32,11 @@
 
         <script>
             let theta = Math.PI / 4.0;
+            let angle_offset = 0.0;
             let new_theta = 0.0;
             let new_x = 0.0;
             let new_y = 0.0;
-            let wheel_radius = 250.00;
+            let wheel_radius = 333.33;
             const cards = document.querySelectorAll('.card');
             const center = {
                 x: parseFloat(getComputedStyle(cards[0]).left),
@@ -46,8 +47,10 @@
                 new_theta = theta * index;
                 new_x = (Math.cos(new_theta) * wheel_radius);
                 new_y = ((-1.0 * Math.sin(new_theta)) * wheel_radius);
+                angle_offset = (index) * (360 / cards.length) + 270
                 card.style.left = `${center.x + new_x}px`;
                 card.style.top = `${center.y + new_y}px`;
+                card.style.transform = "rotate(" + -angle_offset + "deg)";
             });
         </script>
     </body>
